# app-launcher

./: app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
assets/css/: tailwind.css
components/: CreateProject.vue  NavBar.vue
composables/: api.ts  config.ts  store.ts
core/: Cargo.toml  README.md
core/src/: build.rs  create.rs  deploy.rs  git.rs  main.rs  models.rs
core/src/utils/: command.rs  kube.rs  mod.rs  path.rs
core/test/: nestjs.yaml  nextjs.yaml  nuxt.yaml  vite-vue.yaml
layouts/: default.vue
pages/: dashboard.vue  index.vue
pages/project/: [name].vue
pages/project/[name]/: [buildKey].vue  [key].vue  index.vue
prisma/: schema.prisma
prisma/migrations/20230711115059_init/: migration.sql
prisma/migrations/20230715044759_init/: migration.sql
server/api/deployment/: list.ts  new.ts
server/api/project/: get.ts  list.ts  new.ts
