[package]
name = "rhino-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
serde_json = "1.0.99"
nanoid = "0.4.0"
directories = "5.0.1"
kube = { version = "0.83.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.7.0"
anyhow = "1.0.71"
regex = "1.9.0"
once_cell = "1.18.0"
dotenvy = "0.15.7"
